Cards_and_footer
Se agrega el footer con la información de contacto y algunos íconos de prueba. Así mismo, se cambia el tipo de letra en general de la página.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 
-body {    
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;    
     background-color: #f4f4f4;
 }
 
@@ -33,7 +34,7 @@ body {
 .navbar ul li a {
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 15px;
     position: relative;
     padding-bottom: 5px;
 }
@@ -55,38 +56,31 @@ body {
 }
 
 div.container {
+    position: relative;
+    left: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin: 70px auto;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .card {
     display: flex;
     width: 900px;
-    height: 150px;
+    height: 250px;
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
     position: relative;
-    cursor: pointer;
 }
 
 .card:hover {
     transform: scale(1.05);
-}
-
-.card img {
-    width: 40%;
-    height: 100%;
-    object-fit: cover;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 
 .card-content {
@@ -103,4 +97,46 @@ div.container {
 .card:hover .card-content {
     transform: translateX(0);
     opacity: 1;
+}
+
+.card h2 {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.card p {
+    text-align: justify;
+    padding: 10px 30px;
+}
+
+.footer {
+    background-color: #111;
+    color: white;
+    padding: 30px 20px;
+    text-align: center;
+}
+
+.footer .title {
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+
+.footer .social-icons {
+    margin: 20px 0;
+}
+
+.footer .social-icons a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 18px;
+}
+
+.footer .social-icons img {
+    width: 50px;
+}
+
+.footer .copyright {
+    font-size: 12px;
+    margin-top: 10px;
 }
